kubernetes/dev/deployment-pgsql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: gestion-produits-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: pvc-postgres
        - name: init-sql
          configMap:
            name: postgres-init
