kubernetes/dev/deployment-php.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-dev
  namespace: gestion-produits-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php-dev
  template:
    metadata:
      labels:
        app: php-dev
    spec:
      containers:
        - name: php-dev
          image: gregoiremouilleau/gestion-produits-php-pgsql:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: uploads
              mountPath: /var/www/html/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: pvc-uploads-dev
