kubernetes/dev/service-pgsql.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: gestion-produits-dev
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
