kubernetes/dev/service-php.yml
apiVersion: v1
kind: Service
metadata:
  name: php-dev
  namespace: gestion-produits-dev
spec:
  selector:
    app: php-dev
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
